--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="margin_normal">8dp</dimen>
     <dimen name="padding_small">4dp</dimen>
+    <dimen name="padding_big">16dp</dimen>
 </resources>
